# 2023_cytominer_sphering_benchmark

./: .gitignore  protocol.org  pyproject.toml  readme.org
metadata/: experiment_metadata.csv
src/: 1-1_cytominer_pipeline_reverse_sphering.py  1_cytominer_pipeline.py  2_map_calculation.py  3_sphering_profile_decomposition.py  cleaning.py  correct_position_effect.py  inquiry_1_spikes.py  metadata.py  methods.py  process.py  protocol_sphering.py  utils.py  wrappers.py
