[tool.poetry]
name = "cytominer_sphering_benchmark"
version = "0.1.0"
description = ""
authors = ["Alan"]
readme = "README.org"

[tool.poetry.dependencies]
python = "3.8.17"
pandas = "^2.0.3"
PyYAML = "5.3.1"
plotly = "4.14.3"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
scipy = "1.8.1"
matplotlib = "^3.7.3"
seaborn = "^0.12.2"
pycytominer = "^0.2.0"
copairs = {git = "https://github.com/cytomining/copairs", tag = "v0.3.0"}
numpy = "1.23.1"


[tool.poetry.group.dev.dependencies]
jupytext = "^1.15.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
