[tool.poetry]
name = "cytominer_sphering_benchmark"
version = "0.1.0"
description = ""
authors = ["Alan"]
readme = "README.org"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
PyYAML = "5.3.1"
plotly = "4.14.3"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.3"
matplotlib = "^3.7.3"
seaborn = "^0.12.2"
pycytominer = {git = "https://github.com/shntnu/pycytominer", rev = "7ea8197cb5db8fc44bc5d361ab8b41741ccf988b"}
copairs = {git = "https://github.com/cytomining/copairs", tag = "v0.3.0"}
numpy = "^1.26.0"
tqdm = "^4.66.1"
kneed = "^0.8.5"
pathos = "^0.3.1"
broad-babel = "^0.1.7"
pooch = "^1.7.0"
polars = "^0.20.5"


[tool.poetry.group.dev.dependencies]
jupytext = "^1.15.0"
ipdb = "^0.13.13"
jupyter = "^1.0.0"
ruff-lsp = "^0.0.41"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
